TEST_PROGRAMS/VALID/typedeclsimple.go
package main

func main(){
    type num int;
    type point stuct {
        y, x float64
    }
}
