TEST_PROGRAMS/INVALID/14/5151_funcion_call_array.go
package x

func main {
  x[1]();
}
